--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "restore": "npm i"
+    "restore": "npm i",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint": "^7.24.0",
     "prettier": "^2.2.1",
+    "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
     "webpack": "^5.33.2",
-    "webpack-chain": "^6.5.1"
+    "webpack-chain": "^6.5.1",
+    "webpack-cli": "^4.6.0"
   }
 }
