--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "restore": "npm i",
-    "build:dev": "webpack --mode=development",
+    "build:dev": "webpack --mode=development --watch",
     "build:prod": "webpack --mode=production"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint": "^7.24.0",
+    "html-webpack-plugin": "^5.3.1",
     "prettier": "^2.2.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
