--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fast&furious javascript framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "restore": "npm i",
     "build:dev": "webpack --mode=development --watch",
     "build:prod": "webpack --mode=production"
@@ -12,15 +12,26 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint": "^7.24.0",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
     "webpack": "^5.33.2",
     "webpack-chain": "^6.5.1",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "ts-node": "^9.1.1"
   }
 }
