--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint": "^7.24.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
