--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+    "paths": {
+      "@/*" : ["src/*"]
+    }
   },
   "include": [
     "./src/**/*.ts",
