--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
+    "@types/jsdom": "16.2.12",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-jest": "^26.6.3",
@@ -34,6 +35,7 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "jsdom": "^16.6.0",
     "ts-node": "^9.1.1"
   }
 }
