--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "fast&furious javascript framework",
   "main": "index.js",
   "scripts": {
+    "serve": "webpack serve --open --mode=development",
     "test": "jest",
     "restore": "npm i",
     "build:dev": "webpack --mode=development --watch",
@@ -32,7 +33,8 @@
     "typescript": "^4.2.4",
     "webpack": "^5.33.2",
     "webpack-chain": "^6.5.1",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "jsdom": "^16.6.0",
