--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "strict": false,
+    "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
@@ -12,22 +12,11 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
     "paths": {
-      "@/*" : ["src/*"]
+      "@/*": ["src/*"]
     }
   },
-  "include": [
-    "./src/**/*.ts",
-    "./tests/**/*.ts",
-    "./src/**/*.tsx"
-  ], 
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./src/**/*.ts", "./tests/**/*.ts", "./src/**/*.tsx"],
+  "exclude": ["node_modules"]
 }
