--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.2.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
+    "uniqid": "^5.4.0",
     "webpack": "^5.33.2",
     "webpack-chain": "^6.5.1",
     "webpack-cli": "^4.6.0",
